RESOLVED FIXED292042
Web Inspector: Resizing a docked Web Inspector does not follow the cursor smoothly
https://bugs.webkit.org/show_bug.cgi?id=292042
Summary Web Inspector: Resizing a docked Web Inspector does not follow the cursor smo...
Qianlang Chen
Reported 2025-04-24 18:35:13 PDT
rdar://148762897 When I resize a docked Web Inspector, it feels like having a strange force pulling the inspector inwards and to become smaller. I need to move my cursor quickly enough to overcome that force. This issue is amplified with a browser sidebar that sets obscured content insets set on the inspector view.
Attachments
Qianlang Chen
Comment 1 2025-04-24 20:21:19 PDT
EWS
Comment 2 2025-04-25 13:21:43 PDT
Committed 294123@main (fdb9aa79b9b4): <https://commits.webkit.org/294123@main> Reviewed commits have been landed. Closing PR #44501 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.